; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/uIP/extr_bba.c_bba_dochallengeresponse.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/uIP/extr_bba.c_bba_dochallengeresponse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [27 x i8] c"bba_dochallengeresponse()\0A\00", align 1
@UIP_ERR_IF = common dso_local global i32 0, align 4
@UIP_ERR_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @bba_dochallengeresponse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bba_dochallengeresponse() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = call i32 @UIP_LOG(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %5

5:                                                ; preds = %21, %0
  %6 = load i32, i32* %3, align 4
  %7 = add nsw i32 %6, 1
  store i32 %7, i32* %3, align 4
  %8 = call i32 @bba_devpoll(i32* %2)
  %9 = load i32, i32* %2, align 4
  %10 = icmp eq i32 %9, 4096
  br i1 %10, label %11, label %12

11:                                               ; preds = %5
  store i32 0, i32* %3, align 4
  br label %12

12:                                               ; preds = %11, %5
  br label %13

13:                                               ; preds = %12
  %14 = load i32, i32* %3, align 4
  %15 = icmp slt i32 %14, 100
  br i1 %15, label %16, label %21

16:                                               ; preds = %13
  %17 = load i32, i32* %2, align 4
  %18 = and i32 %17, 2048
  %19 = icmp ne i32 %18, 0
  %20 = xor i1 %19, true
  br label %21

21:                                               ; preds = %16, %13
  %22 = phi i1 [ false, %13 ], [ %20, %16 ]
  br i1 %22, label %5, label %23

23:                                               ; preds = %21
  %24 = load i32, i32* %3, align 4
  %25 = icmp sge i32 %24, 1000
  br i1 %25, label %26, label %28

26:                                               ; preds = %23
  %27 = load i32, i32* @UIP_ERR_IF, align 4
  store i32 %27, i32* %1, align 4
  br label %30

28:                                               ; preds = %23
  %29 = load i32, i32* @UIP_ERR_OK, align 4
  store i32 %29, i32* %1, align 4
  br label %30

30:                                               ; preds = %28, %26
  %31 = load i32, i32* %1, align 4
  ret i32 %31
}

declare dso_local i32 @UIP_LOG(i8*) #1

declare dso_local i32 @bba_devpoll(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
